# InvestmentTracker

./: .cursorrules  .gitignore  MIGRATION_SUMMARY.md  README.md  clean-ports.sh  next.config.js  next.config.ts  package-lock.json  package.json  readme.md  test-migration.sh  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build.yml  release.yml
docs/: CLOSED_TRADES_IMPLEMENTATION.md  README.md  calculation-rules.md  code-review.md  gap-analysis.md  manual-release-guide.md  migration-plan.md  project-structure.md  release-guide.md  rust-progress-report.md  storage-design.md  v0.1.3-realtime-price-priority.md  windows-build-setup.md
docs/screenshots/: .gitkeep
docs/推广文案/: 我为什么开始记录每笔交易.md  散户自救手册-用这个工具建立你的投资数据分析体系.md
my-turborepof/: package.json
next-app/: TODO.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
next-app/src-tauri/: Cargo.toml  positions.db  tauri.conf.json
scripts/: README.md  build-release-windows.bat  build-release-windows.ps1  build-release.sh
src-tauri/: Cargo.toml  positions.db  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  migration.rs
src-tauri/src/commands/: mod.rs  position.rs
src-tauri/src/db/: closed_trade_service.rs  mod.rs  portfolio_service.rs  position_repo.rs  quote_service.rs
src-tauri/src/models/: mod.rs  position.rs  quote.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BuyPositionForm.tsx  ClosedTradesView.tsx  ConfirmDialog.tsx  HomePage.tsx  Onboarding.tsx  Portfolio.tsx  PortfolioProfitLossView.tsx  PositionList.tsx  ReducePositionForm.tsx  index.ts  (+1 more)
(+31 files in other folders)
